Added small UI with JFoenix and some intercations with the app